Atualização de preços

--- a/sites.html
+++ b/sites.html
@@ -126,7 +126,7 @@
             <!-- Cards -->
             <div class="row">
 
-                <div class="col-sm-12 col-xl-3 ml-auto mb-5 ">
+                <div class="col-11 col-md-3 ml-auto mb-5 ">
 
                     <div class="card bg-card-site my-3">
 
@@ -134,7 +134,7 @@
 
                         <div class="card-body">
                             <h5 class="card-title">Site Simples</h5>
-                            <h6 class="text-muted card-substitle mb-2">R$ 300,00</h6>
+                            <h6 class="text-muted card-substitle mb-2">R$ 370,00</h6>
                             <p class="card-text">
                             <ul>
                                 <li>Página principal</li>
@@ -160,7 +160,7 @@
 
                 </div>
 
-                <div class="col-sm-12 col-xl-3 mb-5 ">
+                <div class="col-11 col-md-3 mb-5 ">
 
                     <div class="card bg-card-site my-3">
 
@@ -168,7 +168,7 @@
 
                         <div class="card-body">
                             <h5 class="card-title">Site Padrão</h5>
-                            <h6 class="text-muted card-substitle mb-2">R$ 550,00</h6>
+                            <h6 class="text-muted card-substitle mb-2">R$ 600,00</h6>
                             <p class="card-text">
                             <ul>
                                 <li>Site Simples</li>
@@ -188,7 +188,7 @@
 
                 </div>
 
-                <div class="col-sm-12 col-xl-3 mr-auto mb-5 ">
+                <div class="col-11 col-md-3 mr-auto mb-5 ">
 
                     <div class="card bg-card-site my-3">
 
@@ -196,7 +196,7 @@
 
                         <div class="card-body">
                             <h5 class="card-title">Site Completo</h5>
-                            <h6 class="text-muted card-substitle mb-2">R$ 1.000,00</h6>
+                            <h6 class="text-muted card-substitle mb-2">R$ 1.100,00</h6>
                             <p class="card-text">
                             <ul>
                                 <li>Site Padrão</li>
