Atualização de espaçamento

--- a/sites.html
+++ b/sites.html
@@ -75,15 +75,15 @@
     <!-- Informations -->
     <section id="informations" class="mb-5">
 
-        <div class="container col-12">
+        <div class="container col-11">
 
             <!-- Title -->
-            <div class="col-12 text-center pt-5 pb-4">
+            <div class="col-11 text-center pt-5 pb-4">
                 <h2 class="text-site">Quer ter o seu site ? </h2>
             </div>
 
             <!-- Content -->
-            <div class="col-sm-12 col-md-5 mx-auto bg-site pt-2 pb-5 px-2">
+            <div class="col-11 col-md-5 mx-auto bg-site pt-2 pb-5 px-2">
                 <h4 class="text-center mt-2 mb-4">Desenvolvo :</h4>
                 <ul>
                     <li>Site <strong>informativo</strong>.</li>
@@ -114,10 +114,10 @@
     <!-- Prices -->
     <section id="prices" class="my-5 ">
 
-        <div class="container col-12 mb-auto">
+        <div class="container col-11 mb-auto">
 
             <!-- Title -->
-            <div class="col-12 text-center pt-5 pb-4">
+            <div class="col-11 text-center pt-5 pb-4">
                 <h2 class="text-site">Preços</h2>
             </div>
 
@@ -220,7 +220,7 @@
             </div>
             <div class="row">
 
-                <div class=" col-sm-12 col-xl-3 ml-auto mb-5">
+                <div class=" col-11 col-md-3 ml-auto mb-5">
 
                     <div class="card bg-card-site my-3">
 
@@ -242,7 +242,7 @@
 
                 </div>
 
-                <div class="col-sm-12 col-xl-3 mr-auto mb-5">
+                <div class="col-11 col-md-3 mr-auto mb-5">
 
                     <div class="card bg-card-site my-3">
 
@@ -282,15 +282,15 @@
     <!-- Importance -->
     <section id="importance" class="my-5">
 
-        <div class="container col-12">
+        <div class="container col-11">
 
             <!-- Title -->
-            <div class="col-12 text-center pt-5 pb-4">
+            <div class="col-11 text-center pt-5 pb-4">
                 <h2 class="text-site">Importância</h2>
             </div>
 
             <!-- Content -->
-            <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4   ">
+            <div class="col-11 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4   ">
                 <h4 class="text-center mt-2 mb-4">Porque devo ter um site ?</h4>
                 <p>Qualquer vinculação com <strong>mídias</strong>, <strong>redes sociais</strong> e
                     <strong>internete</strong> são de extrema importância hoje em dia.
@@ -315,19 +315,19 @@
     <section id="experience" class="my-5">
 
         <!-- Experience -->
-        <div class="container col-12">
+        <div class="container col-11">
 
             <!-- Title -->
-            <div class="col-12 text-center pt-5 pb-4">
+            <div class="col-11 text-center pt-5 pb-4">
                 <h2 class="text-site">Experiência</h2>
             </div>
 
             <!-- Content -->
-            <div class="col-sm-12 col-md-5 mx-auto bg-site pt-2 pb-5">
+            <div class="col-11 col-md-5 mx-auto bg-site pt-2 pb-5">
 
                 <div class="row">
 
-                    <div class="col-sm-12 col-md-6">
+                    <div class="col-11 col-md-6">
                         <a class="" href="https://fnn-ong.github.io"><img src="images/fnn_logo.png" alt="fnn_logo"></a>
                     </div>
 
@@ -350,7 +350,7 @@
         <footer>
 
             <div class="my-5">
-                <div class="row bg-site col-4 col-sm-1 mx-auto py-2">
+                <div class="row bg-site col-1 col-md-4 mx-auto py-2">
 
                     <a href="https://www.linkedin.com/in/messias-nunesmaia/" class="mx-auto"><i
                             class="fab fa-linkedin-in"></i></a>
