Atualização de espaçamento

--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
   <!-- About -->
   <section id="about" class="my-5 size-page">
 
-    <div class="container col-12">
+    <div class="container col-11">
 
       <!-- Title -->
-      <div class="col-12 text-center pt-5 pb-4">
+      <div class="col-11 text-center pt-5 pb-4">
         <h2 class="text-site">Sobre Mim </h2>
       </div>
 
       <!-- Content -->
-      <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
+      <div class="col-11 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
         <p>Olá, meu nome é Messias Nunesmaia, tenho 20 anos e sou Estudante de Engenharia de Software (4º Semestre).
           Sou bastante dedicado e aprendo rápido. Meus conhecimentos podem ser vistos na aba <em>"Skills"</em>. Tenho
           mais facilidade em Back-End para desenvolvimento WEB ou Android, em Front-End para desenvolvimento de
@@ -155,15 +155,15 @@
   <!-- Interests -->
   <section id="interests" class="my-5 size-page">
 
-    <div class="container col-12">
+    <div class="container col-11">
 
       <!-- Title -->
-      <div class="col-12 text-center pt-5 pb-4">
+      <div class="col-11 text-center pt-5 pb-4">
         <h2 class="text-site">Interesses</h2>
       </div>
 
       <!-- Content -->
-      <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
+      <div class="col-11 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
         <p>Atuar em desenvolvimento de sistemas voltados para <strong>WEB</strong> ou
           <strong>Android</strong>.
           Aprimorar minhas habilidades e ganhar experiência profissional.</p>
@@ -183,15 +183,15 @@
   <!-- Skills -->
   <section id="skills" class="my-5 size-page">
 
-    <div class="container col-12">
+    <div class="container col-11">
 
       <!-- Title -->
-      <div class="col-12 text-center pt-5 pb-4">
+      <div class="col-11 text-center pt-5 pb-4">
         <h2 class="text-site">Skills</h2>
       </div>
 
       <!-- Content -->
-      <div class="col-sm-12 col-md-5 mx-auto bg-site pt-3 pb-5 px-2">
+      <div class="col-11 col-md-5 mx-auto bg-site pt-3 pb-5 px-2">
 
         <ol>
 
@@ -249,15 +249,15 @@
   <!-- Sites -->
   <section id="sites" class="my-5 size-page">
 
-    <div class="container col-12">
+    <div class="container col-11">
 
       <!-- Title -->
-      <div class="col-12 text-center pt-5 pb-4">
+      <div class="col-11 text-center pt-5 pb-4">
         <h2 class="text-site">Quer ter o seu site ?</h2>
       </div>
 
       <!-- Content -->
-      <div class="col-sm-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
+      <div class="col-11 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
         <h3>Desenvolvo Sites Informativos <br> ou de Auto Divulgação </h3>
         <br>
         <h4>Entre em contato :</h4>
@@ -271,7 +271,7 @@
 
         </div>
 
-        <div class="col-12 pt-3">
+        <div class="col-11 pt-3">
           <a class="btn btn-success float-center" href="sites.html">Saiba Mais</a>
         </div>
 
@@ -292,15 +292,15 @@
   <!-- Contact and Footer -->
   <section id="contact" class="my-5 size-page">
 
-    <div class="container col-12">
+    <div class="container col-11">
 
       <!-- Title -->
-      <div class="col-12 text-center pt-5 pb-4">
+      <div class="col-11 text-center pt-5 pb-4">
         <h2 class="text-site"><i class="text-success fas fa-paper-plane">&nbsp</i>Contato</h2>
       </div>
 
       <!-- Content -->
-      <div class="col-sm-12 col-md-5 mx-auto bg-site p-4">
+      <div class="col-11 col-md-5 mx-auto bg-site p-4">
 
         <form id="fs-frm" name="complaint-form" accept-charset="utf-8"
           action="https://formspree.io/messias.lsn@gmail.com" method="post">
