Correção de textos

--- a/sites.html
+++ b/sites.html
@@ -292,7 +292,7 @@
             <!-- Content -->
             <div class="col-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4   ">
                 <h4 class="text-center mt-2 mb-4">Porque devo ter um site ?</h4>
-                <p>Qualquer vinculação com <strong>mídias</strong>, <strong>redes sociais</strong> e
+                <p>Qualquer veiculação com <strong>mídias</strong>, <strong>redes sociais</strong> e
                     <strong>internete</strong> são de extrema importância hoje em dia.
                     Empresas de diferentes tamanhos já estão migrando para o meio digital e isso se intensificou durante
                     a pandemia. Já as empresas recém-criadas iniciam sua jornada no meio digital. Pessoas autônomas
@@ -350,7 +350,7 @@
         <footer>
 
             <div class="my-5">
-                <div class="row bg-site col-1 col-md-4 mx-auto py-2">
+                <div class="row bg-site col-4 col-sm-1 mx-auto py-2">
 
                     <a href="https://www.linkedin.com/in/messias-nunesmaia/" class="mx-auto"><i
                             class="fab fa-linkedin-in"></i></a>
