--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <!-- Personal CSS -->
   <link rel="stylesheet" href="personal_css/style.css" type="text/css">
+  <link rel="stylesheet" href="personal_css/forms.css" type="text/css">
 
   <!-- Optional Scripts -->
   <script type="text/javascript" src="https://kit.fontawesome.com/30b455b9ab.js"></script>
@@ -52,12 +53,6 @@
 
 <body>
 
-  <!-- Ip Script -->
-  <script type="text/javascript">
-    var userip;
-  </script>
-
-  <script type="text/javascript" src="https://l2.io/ip.js?var=userip"></script>
 
   <!-- Navbar -->
   <div id="div_navbar">
@@ -306,153 +301,40 @@
           action="https://formspree.io/messias.lsn@gmail.com" method="post">
           <fieldset id="fs-frm-inputs">
 
+            <!-- Ip Script -->
+            <script type="text/javascript">
+              var userip;
+            </script>
 
+            <script type="text/javascript" src="https://l2.io/ip.js?var=userip"></script>
 
             <input type="text" name="Ip" id="user-ip" style="display: none;">
-
 
             <script>
               document.getElementById("user-ip").value = userip;
             </script>
 
-            <label for="full-name">Nome</label>
-            <input type="text" name="Nome" id="full-name" placeholder="Ex: Messias" required="true">
-            <label for="email-address">Endereço de E-mail</label>
-            <input type="email" name="E-mail" id="email-address" placeholder="email@dominio.com" required="true">
-            <label for="telephone">Telefone</label>
-            <input type="telephone" name="Telefone" id="telephone" placeholder="(99) 9 9999-9999" required="true">
-            <label for="complaint">Com que finalidade seria o site?</label>
-            <textarea rows="3" name="Finalidade" id="complaint"
-              placeholder="Ex: Atuo na área de direito e quero um site pessoal para auto divulgação e possíveis contatos de casos "
-              required="true"></textarea>
+            <div class="d-flex bg-transparent my-3 form-site">
+              <input type="text" name="Nome" id="full-name" required>
+              <label for="email" class="label-site"><span class="content-site">Nome</span></label>
+            </div>
+            <div class="d-flex bg-transparent my-3 form-site">
+              <input type="email" name="E-mail" id="email-address" required>
+              <label for="email" class="label-site"><span class="content-site">E-mail</span></label>
+            </div>
+            <div class="d-flex bg-transparent my-3 form-site">
+              <input type="telephone" name="Telefone" id="telephone" required>
+              <label for="telephone" class="label-site"><span class="content-site">Telefone</span></label>
+            </div>
+            <div class="d-flex my-3 form-site">
+              <textarea rows="3" name="Finalidade" id="complaint" required></textarea>
+              <label for="complaint" class="label-site"><span class="content-site">Finalidade</span></label>
+            </div>
+
           </fieldset>
-          <input id="enviar-formulario" type="submit" value="Enviar">
+          <input id="enviar-formulario" class="d-block btn btn-success ml-auto mt-3" type="submit" value="Enviar">
 
         </form>
-
-        <style>
-          /* reset */
-          #fs-frm input,
-          #fs-frm select,
-          #fs-frm textarea,
-          #fs-frm fieldset,
-          #fs-frm optgroup,
-          #fs-frm label,
-          #fs-frm #card-element:disabled {
-            font-family: inherit;
-            font-size: 100%;
-            color: inherit;
-            border: none;
-            border-radius: 0;
-            display: block;
-            width: 100%;
-            padding: 0;
-            margin: 0;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-
-          }
-
-          #fs-frm label,
-          #fs-frm legend,
-          #fs-frm ::placeholder {
-            font-size: .825em;
-            margin-bottom: .5em;
-            padding-top: .2em;
-            display: flex;
-            align-items: baseline;
-          }
-
-          /* border, padding, margin, width */
-          #fs-frm input,
-          #fs-frm select,
-          #fs-frm textarea,
-          #fs-frm #card-element {
-            border: 1px solid rgba(0, 0, 0, 0.2);
-            background-color: rgba(255, 255, 255, 0.9);
-            padding: .75em 1em;
-            margin-bottom: 1.5em;
-            border-radius: 5px;
-          }
-
-          #fs-frm input:focus,
-          #fs-frm select:focus,
-          #fs-frm textarea:focus {
-            background-color: white;
-            outline-style: solid;
-            outline-width: thin;
-            outline-color: gray;
-            outline-offset: -1px;
-          }
-
-          #fs-frm [type="text"],
-          #fs-frm [type="email"] {
-            width: 100%;
-          }
-
-          #fs-frm [type="button"],
-          #fs-frm [type="submit"],
-          #fs-frm [type="reset"] {
-            width: auto;
-            cursor: pointer;
-            -webkit-appearance: button;
-            -moz-appearance: button;
-            appearance: button;
-            border-radius: 5px;
-          }
-
-          #fs-frm [type="button"]:focus,
-          #fs-frm [type="submit"]:focus,
-          #fs-frm [type="reset"]:focus {
-            outline: none;
-          }
-
-          #fs-frm [type="submit"],
-          #fs-frm [type="reset"] {
-            margin-bottom: 0;
-            margin-left: auto;
-          }
-
-          #fs-frm select {
-            text-transform: none;
-          }
-
-          #fs-frm [type="checkbox"] {
-            -webkit-appearance: checkbox;
-            -moz-appearance: checkbox;
-            appearance: checkbox;
-            display: inline-block;
-            width: auto;
-            margin: 0 .5em 0 0 !important;
-          }
-
-          #fs-frm [type="radio"] {
-            -webkit-appearance: radio;
-            -moz-appearance: radio;
-            appearance: radio;
-          }
-
-          /* address, locale */
-          #fs-frm fieldset.locale input[name="city"],
-          #fs-frm fieldset.locale select[name="state"],
-          #fs-frm fieldset.locale input[name="postal-code"] {
-            display: inline;
-          }
-
-          #fs-frm fieldset.locale input[name="city"] {
-            width: 52%;
-          }
-
-          #fs-frm fieldset.locale select[name="state"],
-          #fs-frm fieldset.locale input[name="postal-code"] {
-            width: 20%;
-          }
-
-          #fs-frm fieldset.locale input[name="city"],
-          #fs-frm fieldset.locale select[name="state"] {
-            margin-right: 3%;
-          }
-        </style>
 
       </div>
 
