Atualização de experiência

--- a/sites.html
+++ b/sites.html
@@ -312,7 +312,7 @@
     </section>
 
     <!-- Experience and Footer -->
-    <section id="experience" class="my-5">
+    <section class="my-5">
 
         <!-- Experience -->
         <div class="container col-12">
@@ -323,12 +323,15 @@
             </div>
 
             <!-- Content -->
-            <div class="col-12 col-md-5 mx-auto bg-site pt-2 pb-5">
+            <div class="col-12 col-md-5 mx-auto bg-site py-5">
 
                 <div class="row">
 
-                    <div class="col-12 col-md-6">
-                        <a class="" href="https://fnn-ong.github.io"><img src="images/fnn_logo.png" alt="fnn_logo"></a>
+                    <div class="experience col-12 col-md-6 mx-auto my-auto">
+                        <a class="d-block mx-auto my-auto" href="https://fnn-ong.github.io"><img src="images/fnn_logo.png" alt="fnn_logo"></a>
+                    </div>
+                    <div class="experience col-12 col-md-6 mx-auto my-auto">
+                        <a class="" href="https://www.lepain.gq"><img src="images/lepain_logo.png" alt="fnn_logo"></a>
                     </div>
 
 
