Atualização de textos

--- a/sites.html
+++ b/sites.html
@@ -153,7 +153,7 @@
                             <br>
                             </p>
                             <a class="card-link text-success float-right "
-                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20um%20Site&body=Estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Simples.">Adquirir</a>
+                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20um%20Site&body=Estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Simples.">Obter</a>
                         </div>
 
                     </div>
@@ -181,7 +181,7 @@
                             <br>
                             </p>
                             <a class="card-link text-success float-right "
-                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20um%20Site&body=Estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Padr%C3%A3o.">Adquirir</a>
+                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20um%20Site&body=Estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Padr%C3%A3o.">Obter</a>
                         </div>
 
                     </div>
@@ -210,7 +210,7 @@
                             <br>
                             </p>
                             <a class="card-link text-success float-right "
-                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20um%20Site&body=Estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Complexo.">Adquirir</a>
+                                href="mailto:messias.lsn@gmail.com?subject=Adquirir%20um%20Site&body=Estou%20entrando%20em%20contato%20pois%20desejo%20adquirir%20um%20Site%20Complexo.">Obter</a>
                         </div>
 
                     </div>
