--- a/index.html
+++ b/index.html
@@ -188,45 +188,22 @@
       <!-- Content -->
       <div class="col-12 col-md-5 mx-auto bg-site pt-3 pb-5 px-2">
 
-        <ol>
-
-          <li><strong>Linguagens</strong>
-
-            <ul>
-
-              <li>
-                Experiência acadêmica em <strong>JAVA</strong>
-              </li>
-              <li>
-                Experiência acadêmica em <strong>SQL</strong>
-              </li>
-              <li>
-                Experiência acadêmica em <strong>HTML</strong> e <strong>CSS</strong>
-              </li>
-
+        <ul>
+          <li>Experiência acadêmica em <strong>Java WEB :</strong>
+            <ul style="list-style: circle">
+              <li><strong>SPRING</strong></li>
+              <li><strong>HTML</strong></li>
+              <li><strong>CSS</strong></li>
             </ul>
-
           </li>
-
-          <li class="mt-3"><strong>Tecnologias</strong>
-
-            <ul>
-
-              <li>
-                Experiência acadêmica em <strong>Desenvolvimento WEB</strong>
-              </li>
-              <li>
-                Experiência acadêmica em <strong>SPRING</strong>
-              </li>
-              <li>
-                Experiência em repositórios Virtuais : <strong>GitHub</strong>
-              </li>
-
+          <li>Experiência acadêmica em <strong>Firebase</strong>
+          <li>Experiência acadêmica em <strong>Bootstrap</strong>
+          <li>Experiência acadêmica em repositórios virtuais :
+            <ul style="list-style: circle">
+              <li><strong>GitHub</strong></li>
             </ul>
-
           </li>
-
-        </ol>
+        </ul>
 
       </div>
 
@@ -252,8 +229,8 @@
       </div>
 
       <!-- Content -->
-      <div class="col-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
-        <h3>Desenvolvo Sites Informativos <br> ou de Auto Divulgação </h3>
+      <div class="col-12 col-md-5 text-center mx-auto bg-site pt-4 pb-5 px-4">
+        <h3>Desenvolvo sites, saiba mais !</h3>
         <br>
         <h4>Entre em contato :</h4>
 
