Remoção de texto

--- a/sites.html
+++ b/sites.html
@@ -330,6 +330,7 @@
                     <div class="experience col-12 col-md-6 mx-auto my-auto">
                         <a class="d-block mx-auto my-auto" href="https://fnn-ong.github.io"><img src="images/fnn_logo.png" alt="fnn_logo"></a>
                     </div>
+                    <hr class="d-sm-none" style="border-radius: 10px;">
                     <div class="experience col-12 col-md-6 mx-auto my-auto">
                         <a class="" href="https://www.lepain.gq"><img src="images/lepain_logo.png" alt="fnn_logo"></a>
                     </div>
