--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
   <!-- Personal CSS -->
   <link rel="stylesheet" href="personal_css/style.css" type="text/css">
-  <link rel="stylesheet" href="personal_css/forms.css" type="text/css">
 
   <!-- Optional Scripts -->
   <script type="text/javascript" src="https://kit.fontawesome.com/30b455b9ab.js"></script>
@@ -54,205 +53,36 @@
 <body>
 
 
-  <!-- Navbar -->
-  <div id="div_navbar">
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link scroll" href="#about">Sobre mim <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link scroll" href="#interests">Interesses</a>
-          <a class="nav-item nav-link scroll" href="#skills">Skills</a>
-          <a class="nav-item nav-link scroll" href="#sites">Quer ter o seu site?</a>
-        </div>
-        <span class="navbar-text ml-auto">Olá, sou Messias !</span>
-      </div>
-    </nav>
-  </div>
+  <!-- Choice -->
+  <section id="choice" class="size-page">
 
-  <!-- Presentation -->
-  <section id="presentation" class="mb-5 size-page">
+    <!-- Cards -->
+    <div class="col-12 py-5">
 
-    <div class="container">
+      <div class="row">
 
-      <!-- Perfil -->
-      <div class="py-5">
-        <img class="d-block rounded-circle mx-auto shadow img-perfil" src="images/perfil.png" alt="">
-      </div>
-
-      <!-- Title -->
-      <div class="py-5">
-
-        <h1 class="d-block text-center text-site display-3">Olá, sou Messias !</h1>
-
-        <script>
-          function typeWriter(elemento) {
-            const textoArray = elemento.innerHTML.split('');
-            elemento.innerHTML = '';
-            textoArray.forEach((letra, i) => {
-              setTimeout(() => elemento.innerHTML += letra, 150 * i);
-            });
-          }
-
-          const titulo = document.querySelector('h1');
-          typeWriter(titulo);
-        </script>
-
-      </div>
-
-      <!-- SVG -->
-      <div class="row neon-site py-5">
-        <a href="#about" class="text-decoration-none mx-auto scroll"><i
-            class="d-none d-md-block fa-4x fas fa-arrow-circle-down text-site"></i>
-          <i class="d-sm-none fa-3x fas fa-arrow-circle-down text-site"></i></a>
-      </div>
-
-    </div>
-
-    </div>
-
-  </section>
-
-  <!-- About -->
-  <section id="about" class="my-5 size-page">
-
-    <div class="container col-12">
-
-      <!-- Title -->
-      <div class="col-12 text-center pt-5 pb-4">
-        <h2 class="text-site">Sobre Mim </h2>
-      </div>
-
-      <!-- Content -->
-      <div class="col-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
-        <p>Olá, meu nome é Messias Nunesmaia, tenho 20 anos e sou Estudante de Engenharia de Software (4º Semestre).
-          Sou bastante dedicado e aprendo rápido. Meus conhecimentos podem ser vistos na aba <em>"Skills"</em>. Tenho
-          mais facilidade em Back-End para desenvolvimento WEB ou Android, em Front-End para desenvolvimento de
-          páginas
-          estáticas (como esta). no fim da página é possível acompanhar meu
-          <em>"GitHub"</em></p>
-      </div>
-
-      <!-- SVG -->
-      <div class="row neon-site  py-5">
-        <a href="#interests" class="text-decoration-none mx-auto scroll"><i
-            class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
-          <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
-      </div>
-
-    </div>
-
-  </section>
-
-  <!-- Interests -->
-  <section id="interests" class="my-5 size-page">
-
-    <div class="container col-12">
-
-      <!-- Title -->
-      <div class="col-12 text-center pt-5 pb-4">
-        <h2 class="text-site">Interesses</h2>
-      </div>
-
-      <!-- Content -->
-      <div class="col-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
-        <p>Atuar em desenvolvimento de sistemas voltados para <strong>WEB</strong> ou
-          <strong>Android</strong>.
-          Aprimorar minhas habilidades e ganhar experiência profissional.</p>
-      </div>
-
-      <!-- SVG -->
-      <div class="row neon-site  py-5">
-        <a href="#skills" class="text-decoration-none mx-auto scroll"><i
-            class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
-          <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
-      </div>
-
-    </div>
-
-  </section>
-
-  <!-- Skills -->
-  <section id="skills" class="my-5 size-page">
-
-    <div class="container col-12">
-
-      <!-- Title -->
-      <div class="col-12 text-center pt-5 pb-4">
-        <h2 class="text-site">Skills</h2>
-      </div>
-
-      <!-- Content -->
-      <div class="col-12 col-md-5 mx-auto bg-site pt-3 pb-5 px-2">
-
-        <ul>
-          <li>Experiência acadêmica em <strong>Java WEB :</strong>
-            <ul style="list-style: circle">
-              <li><strong>SPRING</strong></li>
-              <li><strong>HTML</strong></li>
-              <li><strong>CSS</strong></li>
-            </ul>
-          </li>
-          <li>Experiência acadêmica em <strong>Firebase</strong>
-          <li>Experiência acadêmica em <strong>Bootstrap</strong>
-          <li>Experiência acadêmica em repositórios virtuais :
-            <ul style="list-style: circle">
-              <li><strong>GitHub</strong></li>
-            </ul>
-          </li>
-        </ul>
-
-      </div>
-
-      <!-- SVG -->
-      <div class="row neon-site  py-5">
-        <a href="#sites" class="text-decoration-none mx-auto scroll"><i
-            class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
-          <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
-      </div>
-
-    </div>
-
-  </section>
-
-  <!-- Sites -->
-  <section id="sites" class="my-5 size-page">
-
-    <div class="container col-12">
-
-      <!-- Title -->
-      <div class="col-12 text-center pt-5 pb-4">
-        <h2 class="text-site">Quer ter o seu site ?</h2>
-      </div>
-
-      <!-- Content -->
-      <div class="col-12 col-md-5 text-center mx-auto bg-site pt-4 pb-5 px-4">
-        <h3>Entre em contato :</h3>
-
-        <div id="contactIcon" class="row col-7 col-sm-4 mx-auto pb-3 pt-5">
-
-          <a href="https://www.instagram.com/messias_lsn/" class="text-decoration-none mx-auto"><i
-              class="fab fa-instagram text-success"></i></a>
-          <a href="#contact" class="text-decoration-none mx-auto scroll"><i
-              class="far fa-envelope text-success"></i></a>
-
+        <div class="col-10 col-md-4 mx-auto my-auto">
+          <a href="messias.html">
+            <div class="card my-auto levitate">
+              <img class="card-img-top col-12" src="images/eu.svg">
+              <div class="card-body">
+                <h5 class="card-title text-center mt-4 mb-3">Quero conhecer Messias</h5>
+              </div>
+            </div>
+          </a>
         </div>
 
-        <div class="col-12 pt-3">
-          <a class="btn btn-success float-center" href="sites.html">Saiba Mais</a>
+        <div class="col-10 col-md-4 mx-auto mt-4 mb-auto">
+          <a href="sites.html">
+            <div class="card my-auto levitate">
+              <img class="card-img-top col-12" src="images/website_example_9.svg">
+              <div class="card-body">
+                <h5 class="card-title text-center mt-4 mb-3">Quero criar um site</h5>
+              </div>
+            </div>
+          </a>
         </div>
 
-
-      </div>
-
-      <!-- SVG -->
-      <div class="row neon-site  py-5">
-        <a href="#contact" class="text-decoration-none mx-auto scroll"><i
-            class="d-none d-md-block fa-3x fas fa-arrow-circle-down text-site"></i>
-          <i class="d-sm-none fa-2x fas fa-arrow-circle-down text-site"></i></a>
       </div>
 
     </div>
@@ -260,7 +90,7 @@
   </section>
 
   <!-- Contact and Footer -->
-  <section id="contact" class="my-5 size-page">
+  <section id="contact" class="d-none my-5 size-page">
 
     <div class="container col-12">
 
