Remoção temporariamente de criação de sites

--- a/messias.html
+++ b/messias.html
@@ -223,10 +223,10 @@
 
     <div class="container col-12">
 
-      <!-- Title -->
+      <!-- Title
       <div class="col-12 text-center pt-5 pb-4">
         <h2 class="text-site">Quer ter o seu site ?</h2>
-      </div>
+      </div> -->
 
       <!-- Content -->
       <div class="col-12 col-md-5 text-center mx-auto bg-site pt-4 pb-5 px-4">
@@ -241,9 +241,9 @@
 
         </div>
 
-        <div class="col-12 pt-3">
+        <!-- <div class="col-12 pt-3">
           <a class="btn btn-success float-center" href="sites.html">Saiba Mais</a>
-        </div>
+        </div> -->
 
 
       </div>
