Atualização de texto

--- a/messias.html
+++ b/messias.html
@@ -128,12 +128,12 @@
 
       <!-- Content -->
       <div class="col-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
-        <p>Olá, meu nome é Messias Nunesmaia, tenho 20 anos e sou Estudante de Engenharia de Software (4º Semestre).
+        <p>Olá, meu nome é Messias Nunesmaia, tenho 20 anos e sou Estudante de Engenharia de Software (5º Semestre).
           Sou bastante dedicado e aprendo rápido. Meus conhecimentos podem ser vistos na aba <em>"Skills"</em>. Tenho
-          mais facilidade em Back-End para desenvolvimento WEB ou Android, em Front-End para desenvolvimento de
-          páginas
-          estáticas (como esta). no fim da página é possível acompanhar meu
-          <em>"GitHub"</em></p>
+          experiência em desenvolvimento Full Stack de sistemas WEB e Androido Nativo, além de experiência em páginas
+          pessoas (como esta). No fim da página é possível acompanhar meu
+          <em>"GitHub"</em>.
+        </p>
       </div>
 
       <!-- SVG -->
@@ -161,7 +161,8 @@
       <div class="col-12 col-md-5 text-center mx-auto bg-site pt-2 pb-5 px-4">
         <p>Atuar em desenvolvimento de sistemas voltados para <strong>WEB</strong> ou
           <strong>Android</strong>.
-          Aprimorar minhas habilidades e ganhar experiência profissional.</p>
+          Aprimorar minhas habilidades e ganhar experiência profissional.
+        </p>
       </div>
 
       <!-- SVG -->
@@ -189,12 +190,14 @@
       <div class="col-12 col-md-5 mx-auto bg-site pt-3 pb-5 px-2">
 
         <ul>
-          <li>Experiência acadêmica em <strong>Java WEB :</strong>
+          <li>Experiência profissional em <strong>Java WEB :</strong>
             <ul style="list-style: circle">
               <li><strong>SPRING</strong></li>
               <li><strong>HTML</strong></li>
               <li><strong>CSS</strong></li>
+              <li><strong>JSF</strong></li>
             </ul>
+          <li>Experiência profissional em <strong>Android NAtivo</strong>
           </li>
           <li>Experiência acadêmica em <strong>Firebase</strong>
           <li>Experiência acadêmica em <strong>Bootstrap</strong>
