página de criação de sites de volta

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </a>
         </div>
 
-        <!-- <div class="col-10 col-md-4 mx-auto mt-4 mb-auto">
+        <div class="col-10 col-md-4 mx-auto mt-4 mb-auto">
           <a href="sites.html">
             <div class="card my-auto levitate">
               <img class="card-img-top col-12" src="images/website_example_9.svg">
@@ -81,7 +81,7 @@
               </div>
             </div>
           </a>
-        </div> -->
+        </div> 
 
       </div>
 
