implementação de action no form

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           <div class="col-md-6">
 
             <!-- Form -->
-            <form>
+            <form action="https://formspree.io/f/messias.lsn@gmail.com" method="POST">
 
               <!-- Ip Script -->
               <script type="text/javascript">
