Implementação de descrição e autor

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Sites | Aplicativos">
+  <meta name="author" content="Messias Nunesmaia">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="imagem/x-icon" href="./images/logo.svg" />
 
@@ -348,7 +350,7 @@
                 </div>
                 <div class="col">
                   <div class="form-label">
-                    <select class="select-label" name="select" id="select">
+                    <select class="select-label" name="Sistema" id="select">
                       <option selected disabled value="">Selecione</option>
                       <option value="site">Site</option>
                       <option value="app">Aplicativo</option>
@@ -377,7 +379,7 @@
 
               <!-- Message input -->
               <div class="form-outline mb-4">
-                <textarea class="form-control" name="Finalidade" id="complaint" rows="4"></textarea>
+                <textarea class="form-control" name="Mensagem" id="complaint" rows="4"></textarea>
                 <label class="form-label" for="complaint">Mensagem</label>
               </div>
 
