Atualização de texto

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <p class="text-muted">
               Olá, meu nome é Messias Nunesmaia. <br> Tenho 21 anos, sou estudante de <strong>Engenharia de
                 Software</strong>
-              e <strong>Estagiário em TI</strong>.
+              e <strong>Consultor de Soluções Digitais</strong>.
               <br>
               Tenho experiência em desenvolvimento Full-Stack de sistemas <strong>WEB</strong> e <strong>Mobile</strong>
             </p>
