Atualização de forms

--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
                   </div>
                 </div>
                 <div class="col">
-                  <div class="form-label">
-                    <select class="select-label" name="Sistema" id="select">
-                      <option selected disabled value="">Selecione</option>
+                  <div>
+                    <select class="form-select" name="Sistema" id="select" required>
+                      <option value="" selected disabled>Selecione</option>
                       <option value="site">Site</option>
                       <option value="app">Aplicativo</option>
                       <option value="siteApp">Ambos</option>
