--- a/index.html
+++ b/index.html
@@ -162,9 +162,10 @@
             <p><strong>Principais Habilidades</strong></p>
             <p class="text-muted">
             <ul>
-              <li>Spring Framework</li>
-              <li>Android Nativo</li>
+              <li>Spring</li>
+              <li>Android</li>
               <li>Flutter</li>
+              <li>Angular</li>
             </ul>
             </p>
 
