cards para habilidades e experiencia

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   <main class="continous-flow">
 
+    </div>
     <!-- Presentation -->
     <section id="presentation" class="section">
 
@@ -126,7 +127,137 @@
 
     </section>
 
-    <section id="section2" class="section"></section>
+    <!-- Skills -->
+    <section id="skills" class="section pt-3">
+      <h2 class="text-primary mt-3">Habilidades</h2>
+      <div class="row col mx-auto" style="margin-top: 5rem;">
+
+        <div class="card col-2 m-2">
+          <div class="m-auto mt-3">
+          <i class="fab fa-java fa-3x text-secondary"></i>
+          </div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-primary">Java</h5>
+            <p class="card-text text-primary">4 Anos</p>
+          </div>
+        </div>
+
+        <div class="card col-2 m-2">
+          <div class="m-auto mt-3">
+            <i class="fab fa-angular fa-3x text-secondary"></i>
+            </div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-primary">Angular</h5>
+            <p class="card-text text-primary">2+ Anos</p>
+          </div>
+        </div>
+
+        <div class="card col-2 m-2">
+          <div class="m-auto mt-3">
+            <i class="fab fa-aws fa-3x text-secondary"></i>
+            </div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-primary">AWS</h5>
+            <p class="card-text text-primary">2+ Anos</p>
+          </div>
+        </div>
+
+        <div class="card col-2 m-2">
+          <div class="m-auto mt-3">
+            <i class="fab fa-node fa-3x text-secondary"></i>
+            </div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-primary">Node</h5>
+            <p class="card-text text-primary">2+ Anos</p>
+          </div>
+        </div>
+
+        <div class="card col-2 m-2">
+          <div class="m-auto mt-3">
+            <i class="fas fa-database fa-3x text-secondary"></i>
+            </div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-primary">SQL/NoSql</h5>
+            <p class="card-text text-primary">4 Anos</p>
+          </div>
+        </div>
+
+        <div class="card col-2 m-2">
+          <div class="m-auto mt-3">
+            <i class="fas fa-tower-broadcast fa-3x text-secondary"></i>
+            </div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-primary">Apache Kafka</h5>
+            <p class="card-text text-primary">2+ Anos</p>
+          </div>
+        </div>
+
+        <div class="card col-2 m-2">
+          <div class="m-auto mt-3">
+            <i class="fas fa-satellite-dish fa-3x text-secondary"></i>
+            </div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-primary">RabbitMQ</h5>
+            <p class="card-text text-primary">1+ Anos</p>
+          </div>
+        </div>
+
+        <div class="card col-2 m-2">
+          <div class="m-auto mt-3">
+            <i class="fas fa-code fa-3x text-secondary"></i>
+            </div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-primary">Testes unitários</h5>
+            <p class="card-text text-primary">4 Anos</p>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
+    <!-- Experiences -->
+    <section id="skills" class="section pt-3">
+      <h2 class="text-primary mt-3">Experiência</h2>
+      <div class="row col" style="margin-top: 5rem;">
+
+        <div class="card col-3 m-2">
+          <i class="card-img-top fab fa-java fa-xl text-secondary mt-3 mb-4"></i>
+          <div class="card-body">
+            <h5 class="card-title text-primary">Java</h5>
+            <p class="card-text text-primary">4 Anos</p>
+          </div>
+        </div>
+
+        <div class="card col-3 m-2">
+          <div class="card-body">
+            <i class="fab fa-java fa-xl text-secondary mt-3 mb-4"></i>
+            <h5 class="card-title text-primary">Angular</h5>
+            <p class="card-text text-primary">2+ Anos</p>
+          </div>
+        </div>
+
+        <div class="card col-3 m-2">
+          <div class="card-body">
+            <i class="fab fa-java fa-xl text-secondary mt-3 mb-4"></i>
+            <h5 class="card-title text-primary">Card title</h5>
+            <p class="card-text text-primary">Some quick example text to build on the card title and make up the bulk of
+              the card's content.</p>
+          </div>
+        </div>
+
+        <div class="card col-3 m-2">
+          <div class="card-body">
+            <i class="fab fa-java fa-xl text-secondary mt-3 mb-4"></i>
+            <h5 class="card-title text-primary">Card title</h5>
+            <p class="card-text text-primary">Some quick example text to build on the card title and make up the bulk of
+              the card's content.</p>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
 
   </main>
 
