--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
 
     <!-- Skills -->
     <section id="skills" class="section pt-3">
-      <h2 class="text-primary mt-3">Habilidades</h2>
-      <div class="row col mx-auto" style="margin-top: 5rem;">
+      <h2 class="text-primary mt-3">Principais Habilidades</h2>
+      <div class="row col" style="margin-top: 5rem;">
 
         <div class="card col-2 m-2">
           <div class="m-auto mt-3">
-          <i class="fab fa-java fa-3x text-secondary"></i>
+            <i class="fab fa-java fa-3x text-secondary"></i>
           </div>
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Java</h5>
@@ -145,7 +145,7 @@
         <div class="card col-2 m-2">
           <div class="m-auto mt-3">
             <i class="fab fa-angular fa-3x text-secondary"></i>
-            </div>
+          </div>
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Angular</h5>
             <p class="card-text text-primary">2+ Anos</p>
@@ -155,7 +155,7 @@
         <div class="card col-2 m-2">
           <div class="m-auto mt-3">
             <i class="fab fa-aws fa-3x text-secondary"></i>
-            </div>
+          </div>
           <div class="card-body text-center">
             <h5 class="card-title text-primary">AWS</h5>
             <p class="card-text text-primary">2+ Anos</p>
@@ -165,7 +165,7 @@
         <div class="card col-2 m-2">
           <div class="m-auto mt-3">
             <i class="fab fa-node fa-3x text-secondary"></i>
-            </div>
+          </div>
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Node</h5>
             <p class="card-text text-primary">2+ Anos</p>
@@ -175,7 +175,7 @@
         <div class="card col-2 m-2">
           <div class="m-auto mt-3">
             <i class="fas fa-database fa-3x text-secondary"></i>
-            </div>
+          </div>
           <div class="card-body text-center">
             <h5 class="card-title text-primary">SQL/NoSql</h5>
             <p class="card-text text-primary">4 Anos</p>
@@ -185,7 +185,7 @@
         <div class="card col-2 m-2">
           <div class="m-auto mt-3">
             <i class="fas fa-tower-broadcast fa-3x text-secondary"></i>
-            </div>
+          </div>
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Apache Kafka</h5>
             <p class="card-text text-primary">2+ Anos</p>
@@ -195,7 +195,7 @@
         <div class="card col-2 m-2">
           <div class="m-auto mt-3">
             <i class="fas fa-satellite-dish fa-3x text-secondary"></i>
-            </div>
+          </div>
           <div class="card-body text-center">
             <h5 class="card-title text-primary">RabbitMQ</h5>
             <p class="card-text text-primary">1+ Anos</p>
@@ -205,9 +205,29 @@
         <div class="card col-2 m-2">
           <div class="m-auto mt-3">
             <i class="fas fa-code fa-3x text-secondary"></i>
-            </div>
+          </div>
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Testes unitários</h5>
+            <p class="card-text text-primary">4 Anos</p>
+          </div>
+        </div>
+
+        <div class="card col-2 m-2">
+          <div class="m-auto mt-3">
+            <i class="fab fa-android fa-3x text-secondary"></i>
+          </div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-primary">Android</h5>
+            <p class="card-text text-primary">2 Anos</p>
+          </div>
+        </div>
+
+        <div class="card col-2 m-2">
+          <div class="m-auto mt-3">
+            <i class="fas fa-globe fa-3x text-secondary"></i>
+          </div>
+          <div class="card-body text-center">
+            <h5 class="card-title text-primary">Web</h5>
             <p class="card-text text-primary">4 Anos</p>
           </div>
         </div>
@@ -219,43 +239,89 @@
     <!-- Experiences -->
     <section id="skills" class="section pt-3">
       <h2 class="text-primary mt-3">Experiência</h2>
-      <div class="row col" style="margin-top: 5rem;">
+      <div class="row col px-auto" style="margin-top: 5rem;">
 
-        <div class="card col-3 m-2">
-          <i class="card-img-top fab fa-java fa-xl text-secondary mt-3 mb-4"></i>
-          <div class="card-body">
-            <h5 class="card-title text-primary">Java</h5>
-            <p class="card-text text-primary">4 Anos</p>
+        <div class="card col-4 my-2 mx-4 d-flex">
+          <div class="text-center d-flex mt-3">
+          <i class="card-img-top fab fa-java fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fab fa-angular fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fab fa-aws fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-database fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-globe fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-code fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-tower-broadcast fa-lg text-secondary mt-3 mb-4"></i>
+        </div>
+          <div class="card-body col-12">
+            <h5 class="card-title text-primary">Banco Omni</h5>
+            <p class="card-text text-primary">Fui contratado para corrigir vulnerabilidades de autenticação e segurança para evitar ataques maliciosos ao sistema em um banco com mais de 27 anos de experiência em finanças de crédito e garantir que todo o fluxo de autorização siga o protocolo OAuth sem comprometer os dados pessoais dos usuários.
+            </p>
           </div>
         </div>
 
-        <div class="card col-3 m-2">
-          <div class="card-body">
-            <i class="fab fa-java fa-xl text-secondary mt-3 mb-4"></i>
-            <h5 class="card-title text-primary">Angular</h5>
-            <p class="card-text text-primary">2+ Anos</p>
+        <div class="card col-4 my-2 mx-4 d-flex">
+          <div class="text-center d-flex mt-3">
+          <i class="card-img-top fab fa-java fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fab fa-angular fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fab fa-node fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-database fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-globe fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-code fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-satellite-dish fa-lg text-secondary mt-3 mb-4"></i>
+        </div>
+          <div class="card-body col-12">
+            <h5 class="card-title text-primary">Bradesco</h5>
+            <p class="card-text text-primary">Atuando como desenvolvedor fullstack para o time login no segundo maior banco do Brasil. Fui responsável por implementar soluções para: melhorar a escalabilidade do sistema, mover sessão statefull para stateless, padronizar erros e logs.
+            </p>
+          </div>
+        </div>
+        
+        <div class="card col-4 my-2 mx-4 d-flex">
+          <div class="text-center d-flex mt-3">
+          <i class="card-img-top fab fa-android fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-database fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-globe fa-lg text-secondary mt-3 mb-4"></i>
+        </div>
+          <div class="card-body col-12">
+            <h5 class="card-title text-primary">Instituto Nacional de Tecnologia e Saúde</h5>
+            <p class="card-text text-primary">Criação de sistemas para facilitar os processos de internação de pacientes e comunicação entre os funcionários do Hospital Santa Isabel e da Santa Casa da Misericórdia com implementação da LGPD para melhorar a segurança.</p>
           </div>
         </div>
 
-        <div class="card col-3 m-2">
-          <div class="card-body">
-            <i class="fab fa-java fa-xl text-secondary mt-3 mb-4"></i>
-            <h5 class="card-title text-primary">Card title</h5>
-            <p class="card-text text-primary">Some quick example text to build on the card title and make up the bulk of
-              the card's content.</p>
+        <div class="card col-4 my-2 mx-4 d-flex">
+          <div class="text-center d-flex mt-3">
+          <i class="card-img-top fab fa-android fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-database fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-globe fa-lg text-secondary mt-3 mb-4"></i>
+        </div>
+          <div class="card-body col-12">
+            <h5 class="card-title text-primary">Le Pain</h5>
+            <p class="card-text text-primary">Prestação de serviços de inovação digital para uma padaria, criando um
+              site informativo com gestão de menus e uma aplicação de inventário privado.</p>
           </div>
         </div>
 
-        <div class="card col-3 m-2">
-          <div class="card-body">
-            <i class="fab fa-java fa-xl text-secondary mt-3 mb-4"></i>
-            <h5 class="card-title text-primary">Card title</h5>
-            <p class="card-text text-primary">Some quick example text to build on the card title and make up the bulk of
-              the card's content.</p>
+        <div class="card col-4 my-2 mx-4 d-flex">
+          <div class="text-center d-flex mt-3">
+          <i class="card-img-top fab fa-android fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-database fa-lg text-secondary mt-3 mb-4"></i>
+          <i class="card-img-top fas fa-globe fa-lg text-secondary mt-3 mb-4"></i>
+        </div>
+          <div class="card-body col-12">
+            <h5 class="card-title text-primary">Frente Nacional de Negros e Negras</h5>
+            <p class="card-text text-primary">Prestação de serviços de inovação digital para uma ONG, criando um site informativo com gerenciamento de postagem de texto e mídia para atrair doadores.</p>
           </div>
         </div>
 
       </div>
+
+      <footer class="text-center text-lg-start my-5">
+        <!-- Copyright -->
+        <div class="text-center p-3 text-primary">
+          © 2023 Copyright:
+          <a class="text-primary" href="https://githubcom/Messias-Dev/">Messias Nunesmaia</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
 
     </section>
 
